<resources>
    <string name="app_name">ClasificadorDePesos</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_ident_objetos">Identificar objetos</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="identificar">Identificar</string>
    <string name="resultado">RESULTADO</string>
    <string name="mostrar_resultados">Mostrar resultados</string>
    <string name="todo">TODO</string>
    <string name="descripcion">DESCRIPCION</string>
    <string name="nombre">nombre</string>
    <string name="peso_objeto">Peso Objeto</string>
</resources>